[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Enemies/Bosses/ArmoredBoss.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ArmoredZombieBoss.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 9.37741

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 14, 15, 16, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_bullet_spray"
}, {
"args": [  ],
"method": "spawn_bullet_spray"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[node name="ArmoredZombieBoss" type="KinematicBody2D" groups=[
"enemies",
]]
z_index = 2
script = ExtResource( 2 )

[node name="BulletPos" type="Node2D" parent="."]
position = Vector2( 4, -14 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 4
frame = 16
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.7391, 0.222088 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StunTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/walk = SubResource( 2 )

[node name="WalkingSequenceTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackSequenceTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="StunTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WalkingSequenceTimer" to="." method="_on_WalkingSequenceTimer_timeout"]
[connection signal="timeout" from="AttackSequenceTimer" to="." method="_on_AttackSequenceTimer_timeout"]
